<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_cn">我的APP</string>
    <string name="action_settings_cn">设置</string>
    <string name="hello_world_cn">世界你好!</string>
    <string name="imageView_default_cn">这是个默认的图象</string>
    <string name="info_times_minute">分</string>
    <string name="info_times_hour">时</string>
	<string name="a">字母a</string>
    <string name="b">字母b</string>
    <string name="c">字母c</string>
    <string name="d">字母d</string>
    <string name="e">字母e</string>
	<string name="code_utf8">UTF-8</string>
	<string name="code_gb2312">GB2312</string>
	<string name="swich_code">点击Menu菜单切换合适编码</string>
	<string name="aboutTitle">凡尘一滴工作室</string>
	<string name="aboutInfo">做最实用的软件精品</string>
	<string name="about">关于</string>
	<string name="aboutOK">确定</string>
	<string name="contentDescription">内容描述</string>
	<string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_exit">确认退出程序？</string>
    <string name="mainmenu_home">主目录</string>
    <string name="mainmenu_refresh">刷新</string>
    <string name="mainmenu_createdir">新建文件夹</string>
    <string name="mainmenu_exit">退出</string>
    <string name="file_rename">重命名</string>
    <string name="file_delete">删除</string>
    <string name="file_makesure_delete">确定删除所选书籍吗?</string>
    <string name="file_makesure_delete_localfile">删除本地文件</string>
    <string name="file_info">详情</string>
    <string name="file_cannotopen">无法打开: %1$s</string>
    <string name="file_exists">文件已存在！</string>
    <string name="file_namecannotempty">文件名不能为空</string>
    <string name="file_create_fail">创建文件失败！</string>
    <string name="file_rename_fail">重命名失败！</string>
    <string name="file_name">文件名</string>
    <string name="file_size">大小</string>
    <string name="file_competence">权限</string>
    <string name="file_contents">内容</string>
    <string name="file_lastmodified">最后修改时间</string>
    <string name="file_paste">粘贴</string>
    <string name="file_copy">复制</string>
    <string name="file_move">移动</string>
    <string name="file_create">新建</string>
    <string name="file_copy_fail">复制文件失败！</string>
    <string name="file_move_fail">移动文件失败！</string>
    <string name="file_notexists">文件不存在！</string>
    <string name="pic_info">图片信息</string>
    
    <!-- 下拉刷新 -->
    <string name="drop_dowm">下拉刷新</string>
    <string name="release_update">松开刷新</string>
    <string name="loading">正在加载。。。</string>
    <string name="seen_more">更多</string>
    
    <!-- 百度推送 -->
    <string name="custom_text_hint">用户自定义行为打开的Activity</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    
    
    <!-- 书本 ta标签的汉字 -->
    <string name="book_tab1_text">本地书库</string>
    <string name="book_tab2_text">在线书库</string>
    <string name="book_tab3_text">其他</string>
    
    
    
    <!-- 按钮上的文字 -->
    <string name="btn_back">返回</string>
    <string name="btn_back_uplevel">上一级</string>
    <string name="btn_sdcard_list">存储目录</string>
    
    
    
    
    
    <string name="tab_1">R</string>
    <string name="tab_2">G</string>
    <string name="tab_3">B</string>
    <string name="frag_1">Fragment 1</string>
    <string name="frag_2">Fragment 2</string>
    <string name="frag_3">Fragment 3</string>
    
    
    
    
    
    <!-- 主页面点击熊猫 弹出popwindow 中的radiobutton-->
    <string name="lishi">历史/书签</string>
    <string name="yaoyao">摇摇 分享 </string>
    <string name="chajian">插件 中心 </string>
    <string name="yingyong">应用 推荐 </string>
    <string name="guanyu">　关 于　</string>
    <string name="bendi">本地 文件 </string>
    <string name="wifi">WiFi 传输 </string>
    <string name="shoucang">　收 藏　</string>
    <string name="shezhi">　设 置　</string>
    <string name="tuichu">　退 出　</string>
    <string name="about1">网龙出品NetDragon WebSoft.Inc</string>
    <string name="about2">客服热线：0591-87085788</string>
    <string name="about3">官方网站：http：//ks.sj.91.com</string>
    <string name="about4">本版本在线语音朗读核心技术由科大讯飞提供支持</string>
    <string name="about5">本地语音朗读核心技术由盛大听听提供支持</string>  
    <!-- bookpop.xml -->
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>
    <string name="bookpop_more">更多</string>
    <string name="bookpop_setting">设置</string>
    <!-- 设置 -->
    <string name="btn_color_picker">91PandaReader</string>
    <string name="btn_color_picker2">网龙出品</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
</resources>
