<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_back_uplevel" />

        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sdcard_list" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="15sp"
        android:textColor="#ffffff"
		android:background="#000000"
        />

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:dividerHeight="1dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:drawSelectorOnTop="false" />
    
    
    
    
    
    <TableLayout
        android:id="@+id/btn_bar_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:stretchColumns="0,1,2" 
        android:visibility="gone"
        >

        <TableRow>
            <Button
                android:id="@+id/file_list_btn_createdir"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/file_create" />

            <Button
                android:id="@+id/file_list_btn_paste"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/file_paste" />

            <Button
                android:id="@+id/file_list_btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel" />
        </TableRow>
    </TableLayout>

</LinearLayout>