<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
	>

    <EditText
        android:visibility="gone"
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="EditText" >
    </EditText>
    
    
    <TextView
        android:id="@+id/popup_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/file_makesure_delete"
        android:textColor="#000000"
        android:textSize="15sp" />

    <!-- style="@style/checkbox_style" -->
    <CheckBox
        android:id="@+id/checkBox_local_id"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="@string/file_makesure_delete_localfile"
        />
    
    
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="15sp" >

        </Button>

        <Button
            android:id="@+id/button1_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="#000000"
            android:textSize="15sp" >

        </Button>
    </LinearLayout>

    

</RelativeLayout>